service.yaml
apiVersion: v1
kind: Service
metadata:
  name: broadgame-service
spec:
  type: LoadBalancer
  selector:
    app: broadgame
  ports:
  - port: 80
    targetPort: 8080
